--- a/Project2/Project2.csproj
+++ b/Project2/Project2.csproj
@@ -145,6 +145,7 @@
     <Compile Include="UserControls\SellForm.Designer.cs">
       <DependentUpon>SellForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Utils\PageOffsetList.cs" />
     <EmbeddedResource Include="Forms\LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
     </EmbeddedResource>
