--- a/Project2/App.config
+++ b/Project2/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
     </configSections>
@@ -6,7 +6,14 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
 	<connectionStrings>
-  <add name="strCon" connectionString="SERVER=sql.bsite.net\MSSQL2016;USER=longtt_ptpmud;PASSWORD=123456;DATABASE=longtt_ptpmud"
-   providerName="System.Data.SqlClient" />
+  <add name="strCon" connectionString="SERVER=sql.bsite.net\MSSQL2016;USER=longtt_ptpmud;PASSWORD=123456;DATABASE=longtt_ptpmud" providerName="System.Data.SqlClient" />
  </connectionStrings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
