--- a/Project2/Project2.csproj
+++ b/Project2/Project2.csproj
@@ -225,13 +225,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BUS\CategoryBUS.cs" />
+    <Compile Include="BUS\CustomerBUS.cs" />
     <Compile Include="BUS\EmployeeBUS.cs" />
     <Compile Include="BUS\OrderBUS.cs" />
     <Compile Include="BUS\ProductBUS.cs" />
     <Compile Include="DAO\CategoryDAO.cs" />
+    <Compile Include="DAO\CustomerDAO.cs" />
     <Compile Include="DAO\EmployeeDAO.cs" />
     <Compile Include="DAO\OrderDAO.cs" />
     <Compile Include="DAO\ProductDAO.cs" />
+    <Compile Include="Forms\Components\ListViewNF.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Forms\Components\ModalForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -295,17 +300,23 @@
     <Compile Include="UserControls\LoginForm.Designer.cs">
       <DependentUpon>LoginForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="UserControls\CustomerForm.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControls\CustomerForm.Designer.cs">
+      <DependentUpon>CustomerForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="UserControls\ProductForm.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="UserControls\ProductForm.Designer.cs">
       <DependentUpon>ProductForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="UserControls\SellForm.cs">
+    <Compile Include="UserControls\SalesForm.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="UserControls\SellForm.Designer.cs">
-      <DependentUpon>SellForm.cs</DependentUpon>
+    <Compile Include="UserControls\SalesForm.Designer.cs">
+      <DependentUpon>SalesForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\Components\RoundedButton.cs">
       <SubType>Component</SubType>
@@ -345,11 +356,14 @@
     <EmbeddedResource Include="UserControls\LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="UserControls\CustomerForm.resx">
+      <DependentUpon>CustomerForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UserControls\ProductForm.resx">
       <DependentUpon>ProductForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UserControls\SellForm.resx">
-      <DependentUpon>SellForm.cs</DependentUpon>
+    <EmbeddedResource Include="UserControls\SalesForm.resx">
+      <DependentUpon>SalesForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="MyDB.dbml">
       <Generator>MSLinqToSQLGenerator</Generator>
@@ -396,6 +410,45 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\user_icon_default.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\add_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\update_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\refresh_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\search_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logo_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\minimize_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\close_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\delete_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\close_2_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\information_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\confirm_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\back_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\car_icon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" />
