--- a/Project2/Project2.csproj
+++ b/Project2/Project2.csproj
@@ -341,6 +341,7 @@
     <Compile Include="Forms\Components\FlatTextBox.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Utils\ConvertImage.cs" />
     <Compile Include="Utils\Form_Alert.cs">
       <SubType>Form</SubType>
     </Compile>
