--- a/Project2/Project2.csproj
+++ b/Project2/Project2.csproj
@@ -415,9 +415,7 @@
   <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Resources\Images\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="Resources\info_icon.png" />
   </ItemGroup>
