--- a/Project2/Project2.csproj
+++ b/Project2/Project2.csproj
@@ -407,7 +407,9 @@
   <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\check_icon.png" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="Resources\info_icon.png" />
   </ItemGroup>
@@ -473,6 +475,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\cancel_sell_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\check_2_icon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" />
