--- a/Project2/Project2.csproj
+++ b/Project2/Project2.csproj
@@ -232,12 +232,20 @@
     <Compile Include="BUS\EmployeeBUS.cs" />
     <Compile Include="BUS\OrderBUS.cs" />
     <Compile Include="BUS\ProductBUS.cs" />
+    <Compile Include="BUS\RoleBUS.cs" />
     <Compile Include="DAO\CategoryDAO.cs" />
     <Compile Include="DAO\CityDAO.cs" />
     <Compile Include="DAO\CustomerDAO.cs" />
     <Compile Include="DAO\EmployeeDAO.cs" />
     <Compile Include="DAO\OrderDAO.cs" />
     <Compile Include="DAO\ProductDAO.cs" />
+    <Compile Include="DAO\RoleDAO.cs" />
+    <Compile Include="Forms\Components\EmployeeModalForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Components\EmployeeModalForm.Designer.cs">
+      <DependentUpon>EmployeeModalForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Components\CustomerModalForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -344,6 +352,9 @@
     <Compile Include="Forms\Components\Form_Alert.Designer.cs">
       <DependentUpon>Form_Alert.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Forms\Components\EmployeeModalForm.resx">
+      <DependentUpon>EmployeeModalForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\Components\CustomerModalForm.resx">
       <DependentUpon>CustomerModalForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -364,11 +375,11 @@
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="UserControls\DashboardForm.resx">
-      <DependentUpon>DashboardForm.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="UserControls\EmployeeForm.resx">
       <DependentUpon>EmployeeForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserControls\DashboardForm.resx">
+      <DependentUpon>DashboardForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UserControls\CustomerForm.resx">
       <DependentUpon>CustomerForm.cs</DependentUpon>
@@ -478,6 +489,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\check_2_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\upload_image_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\reset_password_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\recovery_icon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" />
