--- a/Project2/packages.config
+++ b/Project2/packages.config
@@ -1,8 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ClosedXML" version="0.97.0" targetFramework="net472" />
+  <package id="DocumentFormat.OpenXml" version="2.18.0" targetFramework="net472" />
+  <package id="ExcelNumberFormat" version="1.1.0" targetFramework="net472" />
+  <package id="Irony.NetCore" version="1.0.11" targetFramework="net472" />
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net472" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net472" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net472" />
+  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
   <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="net472" />
   <package id="Microsoft.Win32.Registry" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.Win32.Registry.AccessControl" version="6.0.0" targetFramework="net472" />
@@ -10,6 +15,7 @@
   <package id="Microsoft.Windows.Compatibility" version="6.0.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="RestSharpSigned" version="105.2.3" targetFramework="net472" />
+  <package id="SixLabors.Fonts" version="1.0.0-beta19" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.CodeDom" version="6.0.0" targetFramework="net472" />
   <package id="System.ComponentModel.Composition" version="6.0.0" targetFramework="net472" />
@@ -25,10 +31,13 @@
   <package id="System.DirectoryServices.Protocols" version="6.0.0" targetFramework="net472" />
   <package id="System.Drawing.Common" version="6.0.0" targetFramework="net472" />
   <package id="System.IO" version="4.3.0" targetFramework="net472" />
+  <package id="System.IO.Compression" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.FileSystem.AccessControl" version="5.0.0" targetFramework="net472" />
+  <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.Packaging" version="6.0.0" targetFramework="net472" />
   <package id="System.IO.Pipes.AccessControl" version="5.0.0" targetFramework="net472" />
   <package id="System.IO.Ports" version="6.0.0" targetFramework="net472" />
+  <package id="System.IO.UnmanagedMemoryStream" version="4.3.0" targetFramework="net472" />
   <package id="System.Management" version="6.0.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
@@ -59,5 +68,8 @@
   <package id="System.Speech" version="6.0.0" targetFramework="net472" />
   <package id="System.Text.Encoding.CodePages" version="6.0.0" targetFramework="net472" />
   <package id="System.Threading.AccessControl" version="6.0.0" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="System.Web.Services.Description" version="4.9.0" targetFramework="net472" />
+  <package id="XLParser" version="1.5.2" targetFramework="net472" />
 </packages>
