--- a/Project2/App.config
+++ b/Project2/App.config
@@ -6,7 +6,17 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
 	<connectionStrings>
-  <add name="strCon" connectionString="SERVER=sql.bsite.net\MSSQL2016;USER=longtt_ptpmud;PASSWORD=123456;DATABASE=longtt_ptpmud" providerName="System.Data.SqlClient" />
+  <add name="strCon" connectionString="SERVER=sql.bsite.net\MSSQL2016;USER=longtt_ptpmud;PASSWORD=123456;DATABASE=longtt_ptpmud"
+   providerName="System.Data.SqlClient" />
+  <add name="Project2.Properties.Settings.longtt_ptpmudConnectionString"
+   connectionString="Data Source=sql.bsite.net\MSSQL2016;Initial Catalog=longtt_ptpmud;User ID=longtt_ptpmud"
+   providerName="System.Data.SqlClient" />
+  <add name="Project2.Properties.Settings.longtt_ptpmudConnectionString1"
+   connectionString="Data Source=sql.bsite.net\MSSQL2016;Initial Catalog=longtt_ptpmud;Persist Security Info=True;User ID=longtt_ptpmud"
+   providerName="System.Data.SqlClient" />
+  <add name="Project2.Properties.Settings.longtt_ptpmudConnectionString2"
+   connectionString="Data Source=.;Initial Catalog=longtt_ptpmud;Integrated Security=True"
+   providerName="System.Data.SqlClient" />
  </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
