--- a/Project2/Project2.csproj
+++ b/Project2/Project2.csproj
@@ -543,6 +543,9 @@
   <ItemGroup>
     <None Include="Resources\export_excel_icon.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logo_2_icon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" />
   <Target Name="EnsureBclBuildImported" BeforeTargets="BeforeBuild" Condition="'$(BclBuildImported)' == ''">
