--- a/Project2/Properties/Settings.settings
+++ b/Project2/Properties/Settings.settings
@@ -18,5 +18,13 @@
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Data Source=sql.bsite.net\MSSQL2016;Initial Catalog=longtt_ptpmud;Persist Security Info=True;User ID=longtt_ptpmud</Value>
     </Setting>
+    <Setting Name="longtt_ptpmudConnectionString2" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;Data Source=.;Initial Catalog=longtt_ptpmud;Integrated Security=True&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source=.;Initial Catalog=longtt_ptpmud;Integrated Security=True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
